force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt.object-meta.xml
<CustomObject>
    <description>Lookup table with scores for Age bands for new enrollees</description>
    <label>Risk Score Age Band New Enrollee</label>
    <pluralLabel>Risk Score Age Band New Enrollees</pluralLabel>
</CustomObject>