force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/fields/HealthCloudGA__AgeBandFrom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AgeBandFrom__c</fullName>
    <label>Age Band From</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>