force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/fields/HealthCloudGA__CSNP__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CSNP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSNP</label>
    <type>Checkbox</type>
</CustomField>