force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/fields/HealthCloudGA__Gender__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Gender__c</fullName>
    <label>Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <default>true</default>
                <label>Male</label>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>