force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/fields/HealthCloudGA__MedicaidOriginallyDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicaidOriginallyDisabled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Medicaid Originally Disabled</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>