force-app/main/default/src/objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt/fields/HealthCloudGA__NonMedicaidNonOriginallyDisabled__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__NonMedicaidNonOriginallyDisabled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Medicaid Non-Originally Disabled</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>